@@ -830,6 +830,8 @@ Build
   Retina displays.  Applies to Tkinter apps, such as IDLE, on OS X
   framework builds linked with Cocoa Tk 8.5.
 
+- Issue #17161: make install now also installs a python2 and python man page.
+
 Tools/Demos
 -----------
 
